Modified a Paragraph of text

--- a/helloworld.html
+++ b/helloworld.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Soy un titulo de ejemplo</h1>
     <h2>Sitio web coool</h2>
-    <p>Saludos people</p>
+    <p>Porfavor cuentame que te parecio el curso</p>
 </body>
 </html>
